src/css/style.css
/* ... */
    .userWidget .details .userDetails{
        margin-left: 174px;
        min-height: 154px;
        padding-top: 14px;
}
    .userWidget .details .userDetails p{
        line-height: 24px;
    }
    .userWidget .userDetails .coder{
        font-size: 18px;
        line-height: 20px;
    }
    .userWidget .userDetails .coder:hover{
        text-decoration: underline;
    }
    .userWidget .details .userDetails .country{
        letter-spacing: 1px;
    }
    .userWidget .details .userDetails .lbl{
        color: #999;
        font-size: 12px;
        letter-spacing: 1px;
        padding-top: 6px;

        line-height: 20px;
}
    .userWidget .details .userDetails .val{
        font-size: 18px;
        letter-spacing: 1px;
        line-height: 24px;

        font-weight: bold;
}

/* hero area */
#hero{
    min-height: 162px;
    background: #eee;
}
    #hero .track{
        text-align: center;
        font-size: 18px;
        color: #01a8e9;

        margin-top: 0px;
        line-height: 20px;
}
    #hero .track a{
        color: #01a8e9;

        display: block;  height: 142px;  padding-top: 18px;
}
    #hero .track a:hover{
        text-decoration: underline;

        background: #f9f9f9;
}
    #hero .trackSD a{
        color: #228400;
    }
    #hero .trackAn a{
        color: #ff7400;
    }
    #hero .track i{
        display: block;
        height: 89px;
        width: 89px;
        margin: 0 auto 18px;
		cursor: pointer;
}
    #hero .trackUX i{
        background: url(@@cdn/i/ico-ux.png) 50% 0 no-repeat;
    }
    #hero .trackSD i{
        background: url(@@cdn/i/ico-sd.png) 50% 0 no-repeat;
    }
    #hero .trackAn i{
        background: url(@@cdn/i/ico-an.png) 50% 0 no-repeat;
    }

#hero .tracksInfo{
	margin: 0 -12px;
    padding: 22px 0 5px;
}
    #hero .trackInfo{
       height: 120px;
       background: #fff;
       box-shadow: 0 1px 1px rgba(0,0,0,0.5);
       font-size: 14px;
       color: #666;
       position: relative;
}
    #hero .trackInfo i{
       height: 89px;
       width: 89px;

       position: absolute;
       left: 13px;
       top: 13px;
}
    #hero .trackInfo p{
       padding-left: 118px;
    }
    #hero .trackInfo h3{
       display: block;
       color: #01a8e9;
       padding: 16px 0 3px 118px;
    }
    #hero .trackInfo.trackSD h3{
        color: #228400;
    }
    #hero .trackInfo.trackAn h3{
        color: #ff7400;
    }
    #hero .trackInfo a{
       display: inline-block;

       font-size: 12px;
}
/* lay Challenges */
.layChallenges{
    display: block;
}
    .layChallenges header{
        border-bottom: 1px solid #f0f0f0;
        padding-bottom: 12px;
        position: relative;
        font-size: 16px;
}
    .layChallenges header .rt{
        position: absolute;
        right: 0;

        top: 4px;
}
    .layChallenges header .rt a{
        padding-top: 1px;
        display: inline-block;
        float: left;
        margin-left: 20px;

        line-height: 36px;
        -moz-transition-duration: 0s; -webkit-transition-duration: 0s; transition-duration: 0s;
        border-top: 3px solid transparent;
}
    .layChallenges header .rt .calendarView:hover,
    .layChallenges header .rt .gridView:hover,
    .layChallenges header .rt .listView:hover{
        border-top: 3px solid #FF8A00;
    }

    .layChallenges .views {
      position: absolute;
      right: 55px;
    }
    .layChallenges .views > a{
      font-size: 11px;
      line-height: 13px;
      color: #A3A3AE;
    }
    .layChallenges .views a + a {
      margin-left: 10px;
    }
    .layChallenges .views a.isActive {
      color: #000000;
    }

.layChallenges .actions{
    min-height: 25px;
    position: relative;
    font-size: 16px;
    padding: 16px 0 15px;
    z-index: 10;
}
    .layChallenges .actions .rt{
        float: right;
        margin-top: -25px;
        line-height: 24px;
}
    .layChallenges .actions .lt{
        float: left;

        line-height: 24px;
        margin-top: -25px;
        min-width: 118px;
        min-height: 24px;
}
    .layChallenges .actions .lt > span{
        float: left;
        margin-right: 8px;
    }
    .layChallenges .challengeType{

        width: 300px;
        margin: 0 auto;
}
    .layChallenges .challengeType ul{
        overflow: hidden;

        display: block;
        font-size: 16px;
        padding: 10px 0 0 55px;
}
    .layChallenges .challengeType ul > li{
        float: left;
        border-left: 1px solid #D0D0D1;
        height: 18px;
        line-height: 18px;
}
    .layChallenges .challengeType ul li:first-child{
        border-left: 0;
    }
    .layChallenges .challengeType ul .link{
        margin: 0 10px;
    }
    .layChallenges .challengeType ul .link.active,
    .layChallenges .challengeType ul .link.active:hover{
        color: #666;
        cursor: default;
    }
    .layChallenges .actions .searchLink{
        background: url(@@cdn/i/ico-zoom.png) 0 50% no-repeat;
        padding-left: 27px;

        line-height: 22px;
        height: 22px;
        display: inline-block;
}
    .layChallenges .actions .upDown{
        display: inline-block;
        padding-right: 20px;
        position: relative;

        margin-left: 4px;
}

    .layChallenges .actions .upDown i{
        position: absolute;
        right: 0;
        top: 2px;
        width: 13px;
        height: 24px;
        background: url(@@cdn/i/arrows-ud.png) no-repeat;
        background-position: 0 8px;
    }
    .layChallenges .actions .on .upDown i{
        background-position: 100% -13px;
        -moz-transition-duration: .3s; -webkit-transition-duration: .3s; transition-duration: .3s;
    }
    .lt .ddWrap{
         float: left;
    }
.ddWrap{
    display: inline-block;
    vertical-align: top;
    height: 24px;
}
    .ddWrap .list{
        border: 1px solid #ccc;
        border-top: none;

        display: none;
        background: #fff;
}
    .ddWrap.on .list{
        display: block;
    }
/* ... */

